# ppxnet

./: CMakeLists.txt  README.md  build.bat  build_shared.bat  build_static.bat  run_cmake.bat  run_cmake_shared.bat  run_cmake_static.bat
CMake/: ppxnet-config.cmake
include/: ppx_config.h.in  ppx_net.h
include/ppxnet/: file_download.h  file_transfer_base.h  global_env.h  host_resolve.h  http_request.h  iocp.h  iocpserver.h  ipaddress.h  networkprotocoldef.h  overlappedsocket.h  ping.h  ppxnet_export.h  socket.h  socketaddress.h
include/ppxnet/internal/: scoped_curl.h
src/: CMakeLists.txt  file_download.cpp  file_transfer_base.cpp  global_env.cpp  host_resolve.cpp  http_request.cpp  iocp.cpp  iocpserver.cpp  ipaddress.cpp  networkprotocoldef.cpp  overlappedsocket.cpp  ping.cpp  ppx_net.cpp  socketaddress.cpp
tests/: CMakeLists.txt
tests/test01/: CMakeLists.txt  main.cpp
